plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.0'
	id 'io.spring.dependency-management' version '1.1.4'
	id 'org.jetbrains.kotlin.jvm'
	id "org.asciidoctor.jvm.convert" version "3.3.2"
}

group = 'kr.co'
version = '0.0.1-SNAPSHOT'

java {
}

ext {
	set('snippetsDir', file("build/generated-snippets"))
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
	asciidoctorExtensions
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web-services'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	implementation 'com.amazonaws:aws-java-sdk-s3:1.12.528'

	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	runtimeOnly 'com.h2database:h2'
	runtimeOnly 'org.postgresql:postgresql'
	implementation 'org.postgresql:postgresql'
	implementation 'org.hibernate:hibernate-core:6.4.0.Final'
	implementation 'org.hibernate:hibernate-spatial:6.4.0.Final'
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	implementation 'org.springframework.session:spring-session-data-redis'

	implementation 'org.springframework.boot:spring-boot-starter-security'
	testImplementation 'org.springframework.security:spring-security-test'
	implementation 'com.github.ulisesbocchio:jasypt-spring-boot-starter:3.0.5'

	implementation 'com.github.maricn:logback-slack-appender:1.6.1'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
	asciidoctorExtensions 'org.springframework.restdocs:spring-restdocs-asciidoctor'


	// https://mvnrepository.com/artifact/org.locationtech.jts/jts-core
	implementation 'org.locationtech.jts:jts-core:1.19.0'
	// https://mvnrepository.com/artifact/org.locationtech.jts.io/jts-io-common
	implementation 'org.locationtech.jts.io:jts-io-common:1.19.0'


}

tasks.named('test') {
	outputs.dir snippetsDir
	useJUnitPlatform()
}

tasks.named('asciidoctor') {
	configurations "asciidoctorExtensions"
	inputs.dir snippetsDir
	dependsOn test
}

tasks.register('copyDocument', Copy) {
	dependsOn asciidoctor
	from file("${asciidoctor.outputDir}")
	into file("src/main/resources/static/docs")
}

build {
	dependsOn copyDocument
}

bootJar {
	dependsOn copyDocument
	from ("${asciidoctor.outputDir}") {
		into 'static/docs'
	}
}

kotlin {
	jvmToolchain(21)
}
